--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,6 +7,4 @@ test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: ibsite_production
+  adapter: async
