some server management progress

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,8 @@
 name: Docker
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -25,6 +23,7 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
 
     - name: Push the Docker image
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       run: |
         docker push ghcr.io/69th-ib/ibsite:latest
         docker push ghcr.io/69th-ib/ibsite:${{ steps.version_number.outputs.version }}
